--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,8 +4,15 @@
 	"version": "1.0.0",
 	"type": "module",
 	"main": "dist/index.cjs",
-  "module": "dist/index.js",
+	"module": "dist/index.js",
 	"types": "dist/index.d.ts",
+	"exports": {
+		".": {
+			"import": "./dist/index.js",
+			"require": "./dist/index.cjs",
+			"types": "./dist/index.d.ts"
+		}
+	},
 	"files": [
 		"dist",
 		"README.md"
