--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,16 +1,14 @@
 {
 	"name": "ux-dev-monitor-tool",
 	"private": false,
-	"version": "1.0.1",
+	"version": "1.0.2",
 	"type": "module",
 	"main": "dist/index.cjs",
 	"module": "dist/index.js",
-	"types": "dist/index.d.ts",
 	"exports": {
 		".": {
 			"import": "./dist/index.js",
-			"require": "./dist/index.cjs",
-			"types": "./dist/index.d.ts"
+			"require": "./dist/index.cjs"
 		}
 	},
 	"files": [
@@ -31,6 +29,7 @@
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.25.0",
+		"@types/node": "^24.0.3",
 		"@types/react": "^19.1.8",
 		"@types/react-dom": "^19.1.2",
 		"@vitejs/plugin-react-swc": "^3.9.0",
