--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,8 @@
 {
 	"name": "ux-dev-monitor-tool",
 	"private": false,
-	"version": "1.0.14",
+	"version": "1.0.18",
+  "license": "MIT",
 	"type": "module",
 	"main": "dist/index.cjs",
 	"module": "dist/index.js",
@@ -13,7 +14,8 @@
 	},
 	"files": [
 		"dist",
-		"README.md"
+		"README.md",
+    "LICENSE.md"
 	],
 	"scripts": {
 		"dev": "vite",
